# rust-embedded-to-backend

./: .gitignore  Makefile  README.md
c/: main.c
geodude-packet-parser/: Cargo.toml
geodude-packet-parser-c/: Cargo.toml
geodude-packet-parser-c/src/: lib.rs
geodude-packet-parser-emb-c/: Cargo.toml
geodude-packet-parser-emb-c/src/: lib.rs
geodude-packet-parser-js/: Cargo.toml
geodude-packet-parser-js/src/: .lib.rs.rustfmt  lib.rs
geodude-packet-parser/src/: lib.rs
javascript/: index.js  package.json
lib-parser/: Cargo.toml
lib-parser/src/: lib.rs
