[package]
name = "geodude-packet-parser-js"
version = "0.1.0"
authors = ["Lucas Denefle <lucas.denefle@converge.io>"]
edition = "2018"

[lib]
name = "parser"
crate-type = ["cdylib"]

[dependencies]
parser = { version = "0.1.0", features = [ "std", "serialize" ], path = "../lib-parser" }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
