[package]
name = "geodude-packet-parser"
version = "0.1.0"
authors = ["Lucas Denefle <lucas.denefle@converge.io>"]
edition = "2018"

[lib]
name = "parser"
crate-type = ["staticlib"] # Creates static lib

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = { version = "1", default-features = false }
cty = "*"

[target.thumbv7em-none-eabihf.dependencies]
panic-halt = "0.2.0"
