[package]
name = "geodude-packet-parser"
version = "0.1.0"
authors = ["Lucas Denefle <lucas.denefle@converge.io>"]
edition = "2018"

[lib]
name = "parser"
crate-type = ["cdylib", "staticlib"]


[dependencies]
byteorder = { version = "1", default-features = false }
cty = "*"
serde = "^1.0.59"
serde_derive = "^1.0.59"

[dependencies.wasm-bindgen]
version = "^0.2"
features = ["serde-serialize"]

[target.thumbv7em-none-eabihf.dependencies]
panic-halt = "0.2.0"
